# OneCAD

./: .coderabbit.yaml  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SKETCH_IMPLEMENTATION_PLAN.md  SPECIFICATION.md  UI_analysis.md  brainstorming.md  one_cad_architecture_optimization_implementation_plan_v_1_v_2_spec.md
.cache/clangd/index/: AddBodyCommand.cpp.84ABB478D170C650.idx  AddBodyCommand.h.65A956E191174CBD.idx  AddOperationCommand.cpp.59EA8A806A3F0350.idx  AddOperationCommand.h.E2E80A6E4C6A83DC.idx  AdjacencyGraph.cpp.17C44F24EB7517D0.idx  AdjacencyGraph.h.301BAE532669C953.idx  Application.cpp.1E49D010F72225FE.idx  Application.h.0396D1C3906EF5F4.idx  ArcTool.cpp.5968D1701690FF27.idx  ArcTool.h.DC0EE606C69B7C7F.idx  AutoConstrainer.cpp.7EB06E21060AFC5A.idx  AutoConstrainer.h.051861E27F8AD446.idx  BodyRenderer.cpp.458B67E7E396728C.idx  BodyRenderer.h.1A2EC54AD4564086.idx  BooleanOperation.cpp.4C6F32217DED5385.idx  BooleanOperation.h.0DEA060B3DAED303.idx  Camera3D.cpp.C8524A3CA139A5F5.idx  Camera3D.h.24C4E039B51463F6.idx  CircleTool.cpp.D21B3778B35B09C7.idx  CircleTool.h.085B9EC0F351D730.idx  Command.h.45AC82308FF35501.idx  CommandProcessor.cpp.2F810B8F34A5BBCD.idx  CommandProcessor.h.8C83CB9B73F8AECB.idx  Console.h.5AC44EF04C9DECAF.idx  ConstraintPanel.cpp.280DC65737568E9A.idx  ConstraintPanel.h.BC8C14A15EE9648B.idx  ConstraintSolver.cpp.FA5B0522E43ACA71.idx  (+202 more)
.codex/environments/: environment.toml
.github/prompts/: TestsGeneration.prompt.md
.github/workflows/: ci.yml
.opencode/: oh-my-opencode.jsonc  opencode.jsonc
.sisyphus/: boulder.json
.sisyphus/drafts/: line-drag-guideline-regressions.md
.sisyphus/plans/: guide-visual-bugs-fix.md  line-drag-guideline-regressions-fix.md  sketcher-snap-guides-cad-parity.md  snap-guide-auto-follow.md  snap-multi-guide.md  snap-priority-overlap-stabilization-final-review.md  snap-priority-overlap-stabilization.md  snap-system-upgrade.md  snap-visual-fix.md
docs/: LOGGING_ANALYSIS_PLAN.md  PHASES.md  PHASES_UPDATE.md  SKETCH_IMPLEMENTATION_PLAN.md  SPECIFICATION.md  THUMBNAIL_ANALYSIS.md
docs/adr/: ADR-001-sketch-phase2.md
docs/researches/: GRID_INFINITE.md  SHAPR_SKETCHING.md
docs/testing/: SEQUENTIAL_THINKING_LOG.md  SKETCH_TEST_PLAN.md
src/: main.cpp
src/app/: Application.cpp  Application.h  CMakeLists.txt  Logging.cpp  Logging.h
src/app/commands/: AddBodyCommand.cpp  AddBodyCommand.h  AddOperationCommand.cpp  Command.h  CommandProcessor.cpp  CommandProcessor.h  ModifyBodyCommand.cpp  ModifyBodyCommand.h  OperationCommandUtils.h  RollbackCommand.cpp  RollbackCommand.h
src/app/document/: Document.cpp  Document.h  OperationMetadata.h  OperationRecord.h
src/app/history/: DependencyGraph.cpp  KernelScheduler.cpp  KernelScheduler.h  RegenerationEngine.cpp  RegenerationEngine.h
src/app/selection/: SelectionManager.cpp  SelectionManager.h  SelectionTypes.h
src/core/: AGENTS.md  CMakeLists.txt
src/core/loop/: FaceBuilder.cpp  FaceBuilder.h  LoopDetector.cpp  LoopDetector.h  RegionUtils.cpp  RegionUtils.h
src/core/modeling/: BooleanOperation.cpp  BooleanOperation.h
src/core/sketch/: AutoConstrainer.cpp  FaceBoundaryProjector.cpp  Sketch.cpp  Sketch.h  SketchArc.cpp  SketchArc.h  SketchCircle.cpp  SketchCircle.h  SketchConstraint.cpp  SketchConstraint.h  SketchEllipse.cpp  SketchEntity.cpp  SketchEntity.h  SketchLine.cpp  SketchLine.h  SketchPoint.cpp  SketchPoint.h  SketchRenderer.cpp  SketchRenderer.h  SketchTypes.h  SnapManager.cpp  SnapManager.h
src/core/sketch/constraints/: Constraints.cpp  Constraints.h
src/core/sketch/solver/: ConstraintSolver.cpp  ConstraintSolver.h  SolverAdapter.cpp  SolverAdapter.h
src/core/sketch/tools/: ArcTool.cpp  ArcTool.h  CircleTool.cpp  CircleTool.h  EllipseTool.cpp  EllipseTool.h  LineTool.cpp  LineTool.h  RectangleTool.cpp  RectangleTool.h  SketchTool.h  SketchToolManager.cpp  SketchToolManager.h  SnapPreviewResolver.cpp  SnapPreviewResolver.h
src/io/: CMakeLists.txt  DocumentIO.cpp  HistoryIO.cpp  HistoryIO.h
src/kernel/: AGENTS.md  CMakeLists.txt
src/kernel/elementmap/: ElementMap.h
src/render/: AGENTS.md  BodyRenderer.cpp  BodyRenderer.h  CMakeLists.txt  Camera3D.cpp  Camera3D.h  Grid3D.cpp  Grid3D.h
src/render/scene/: SceneMeshStore.cpp  SceneMeshStore.h
src/render/tessellation/: TessellationCache.cpp  TessellationCache.h
src/ui/: AGENTS.md  CMakeLists.txt
src/ui/history/: EditParameterDialog.cpp  FeatureCard.cpp  FeatureCard.h  HistoryPanel.cpp  HistoryPanel.h
src/ui/inspector/: PropertyInspector.cpp  PropertyInspector.h
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
src/ui/navigator/: ModelNavigator.cpp  ModelNavigator.h
src/ui/selection/: DeepSelectPopup.cpp  DeepSelectPopup.h  ModelPickerAdapter.cpp  ModelPickerAdapter.h  SketchPickerAdapter.cpp  SketchPickerAdapter.h
src/ui/sketch/: ConstraintApplicability.cpp  ConstraintApplicability.h  ConstraintPanel.cpp  ConstraintPanel.h  DimensionEditor.cpp  DimensionEditor.h  SketchModePanel.cpp  SketchModePanel.h
src/ui/theme/: ThemeManager.cpp  ThemeManager.h
src/ui/toolbar/: ContextToolbar.cpp  ContextToolbar.h
src/ui/tools/: ExtrudeTool.cpp  ExtrudeTool.h  FilletChamferTool.cpp  FilletChamferTool.h  ModelingTool.h  ModelingToolManager.cpp  ModelingToolManager.h  RevolveTool.cpp  RevolveTool.h  ShellTool.cpp  ShellTool.h
src/ui/viewcube/: ViewCube.cpp  ViewCube.h
src/ui/viewport/: SnapSettingsPanel.cpp  SnapSettingsPanel.h  Viewport.cpp  Viewport.h  ViewportModeling.cpp  ViewportRevolve.cpp
tests/: CMakeLists.txt
tests/prototypes/: proto_custom_map.cpp  proto_document_roundtrip_compat.cpp  proto_elementmap_rigorous.cpp  proto_face_builder.cpp  proto_history_io_compat.cpp  proto_model_picker.cpp  proto_pick_topology_promotion.cpp  proto_pickmesh_integration.cpp  proto_sketch_constraints.cpp  proto_sketch_fixed_and_move.cpp  proto_sketch_geometry.cpp  proto_sketch_snap.cpp  proto_sketch_solver.cpp  proto_sketch_tool_dimensions.cpp  proto_tessellation_cache.cpp  proto_timeline_rollback_dirty.cpp
tests/test_harness/: TestHarness.h
(+21 files in other folders)
